...
                  filled: true,
                  fillColor: AppColors.white,
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.circular(Spacings.cornerRadius),
                    borderSide: const BorderSide(color: AppColors.black),
                  ),
                  hintText: 'Code',
                ),
              ),
            ),
            const SizedBox(height: Spacings.widgetVertical),
            const Text(
              StaticText.listName,
...
                  filled: true,
                  fillColor: AppColors.white,
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.circular(Spacings.cornerRadius),
                    borderSide: const BorderSide(color: AppColors.black),
                  ),
                  hintText: 'Name',
                ),
              ),
            ),
            const SizedBox(height: Spacings.widgetVertical),
            Align(
              alignment: Alignment.centerRight,
...
