import 'package:flutter/material.dart';

final Map<String, IconData> tasteIcons = {
  'Fruchtig': Icons.local_florist,
  'Blumig': Icons.local_florist,
  'Erdig': Icons.terrain,
  'Kräutrig': Icons.grass,
  'Gewürzig': Icons.local_dining,
  'Holzig': Icons.park,
  'Nussig': Icons.eco,
  'Buttrig': Icons.local_pizza,
  'Süß': Icons.icecream,
  'Mineralisch': Icons.grain,
};

final Map<String, Color> tasteColors = {
  'Fruchtig': Colors.red,
  'Blumig': Colors.pink,
  'Erdig': Colors.brown,
  'Kräutrig': Colors.green,
  'Gewürzig': Colors.orange,
  'Holzig': Colors.brown.shade800,
  'Nussig': Colors.amber,
  'Buttrig': Colors.yellow.shade700,
  'Süß': Colors.purple,
  'Mineralisch': Colors.grey,
};

final Map<String, IconData> fitsforIcons = {
  'Käse': Icons.local_pizza,
  'Fisch': Icons.restaurant,
  'Rindfleisch': Icons.restaurant,
  'Geflügel': Icons.local_dining,
  'Schokolade': Icons.cake,
  'Pasta': Icons.restaurant,
  'Meeresfrüchte': Icons.restaurant,
  'Lamm': Icons.local_dining,
  'Desserts': Icons.local_dining,
  'Vegetarisch': Icons.local_florist,
};

final Map<String, Color> fitsColors = {
  'Käse': Colors.yellow.shade700,
  'Fisch': Colors.lightBlue,
  'Rindfleisch': Colors.red.shade800,
  'Geflügel': Colors.brown,
  'Schokolade': Colors.brown.shade900,
  'Pasta': Colors.orange,
  'Meeresfrüchte': Colors.teal,
  'Lamm': Colors.red.shade700,
  'Desserts': Colors.pink,
  'Vegetarisch': Colors.green,
};