#This should be the first flow to be executed

appId: com.example.vinoveritas
---
- launchApp
- tapOn: "  Nutzername"
- inputText:
    text: "TestUser"
- hideKeyboard
- tapOn: "Los Gehts!"
- tapOn:
    leftOf: "Hiermit bestätige ich das ich mindestens 16 Jahre alt bin"
- tapOn: "Weine entdecken"
